--- a/frontend/components/imageDescriptor/imageDescriptor.module.css
+++ b/frontend/components/imageDescriptor/imageDescriptor.module.css
@@ -204,6 +204,81 @@
   height: 100px; /* Keeps aspect ratio */
 }
 
+.claimContainer {
+  background: #fff;
+  border-radius: 8px;
+  padding: 0px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 16px;
+}
+
+.claimHeader {
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  margin-bottom: 12px;
+  background-color: #f1f1f1;
+  padding: 10px;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.checkIcon {
+  margin-right: 8px;
+}
+
+.claimDetails {
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.detailRow {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
+  margin: 10px 35px;
+}
+
+.detailTitle{
+  color: #9E9E9E;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.claimSummary{
+  text-align: left;
+  margin: 20px 35px;
+}
+
+.policySection {
+  margin: 20px 35px;
+  text-align: left;
+}
+
+.policyBox {
+  background: #f8f8f8;
+  padding: 8px;
+  border-radius: 9px;
+  font-size: 14px;
+  color: #333;
+  margin-top: 10px;
+}
+
+.recommendations {
+  margin: 20px 35px;
+  text-align: left;
+}
+
+.recommendations ol {
+  padding-left: 16px;
+}
+
+.recommendations li {
+  margin-bottom: 8px;
+}
+
+
 
 @keyframes spin {
   0% {
@@ -229,3 +304,4 @@
   border-radius: 0; /* Remove border radius */
   font-size: 16px; /* Increase font-size for better readability */
 }
+
