--- a/frontend/components/imageDescriptor/imageDescriptor.module.css
+++ b/frontend/components/imageDescriptor/imageDescriptor.module.css
@@ -80,25 +80,6 @@
   margin-top: 5px;
 }
 
-.statusTag {
-  background-color: #cff8bf;
-  color: #025019;
-  padding: 2px 10px;
-  border-radius: 50px;
-  font-weight: 700;
-  font-size: 18px;
-  width: fit-content;
-}
-
-.lossTbd {
-  background-color: #fff3a0;
-  color: #d68d00;
-  padding: 2px 10px;
-  border-radius: 50px;
-  font-weight: 700;
-  width: fit-content;
-}
-
 .topRow {
   display: flex;
   justify-content: space-between;
@@ -138,16 +119,6 @@
 
 .fieldContent {
   font-size: 14px;
-}
-
-.lossAmount {
-  font-size: 14px;
-  color: #016bf8;
-  font-weight: 600;
-  background-color: #e1f7ff;
-  border-radius: 25px;
-  padding: 5px 15px;
-  width: fit-content;
 }
 
 .topRow {
@@ -224,6 +195,14 @@
 
 .checkIcon {
   margin-right: 8px;
+}
+
+.imageDescriptionTitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px; /* Adjust spacing as needed */
+  text-align: center;
 }
 
 .claimDetails {
