--- a/frontend/components/toastNotificationRight/toastNotificationRight.module.css
+++ b/frontend/components/toastNotificationRight/toastNotificationRight.module.css
@@ -1,7 +1,7 @@
 .toast {
     position: fixed;
     bottom: 20px;
-    left: 20px;
+    right: 20px;
     background-color: #00684A;
     color: #fff;
     padding: 12px 16px;
