--- a/frontend/components/imageDescriptor/imageDescriptor.module.css
+++ b/frontend/components/imageDescriptor/imageDescriptor.module.css
@@ -204,6 +204,7 @@
 
 .imageDescriptionTitle {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 8px; /* Adjust spacing as needed */
@@ -228,6 +229,14 @@
   color: #9E9E9E;
   font-weight: 500;
   margin-bottom: 5px;
+}
+
+.claimStatusContainer {
+  display: flex;
+  flex-direction: column; /* Stack items vertically */
+  align-items: center; /* Center them horizontally */
+  justify-content: center; /* Center vertically within the section */
+  gap: 4px; /* Adjust spacing between text and badge */
 }
 
 .claimSummary{
@@ -276,11 +285,8 @@
   margin-top: 10px;
   text-align: center;  /* Align text left if needed */
   margin-left: 20%; 
-<<<<<<< Updated upstream
   margin-right: 20%;
-=======
-  margin-right: 20%; 
->>>>>>> Stashed changes
+
 }
 
 /* Remove the box styling by removing similarDoc class rules */
